--- a/Jama/src/main/webapp/resources/sections/installmentLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentLastStep.xhtml
@@ -11,8 +11,7 @@
 		
 
 			<p:commandButton value="#{msgs.save}"
-				action="#{installmentWizardPB.save()}"
-				actionListener="#{agreementShareTablePCB.toUpdate()}" ajax="false" />
+				action="#{installmentWizardPB.save()}" ajax="false" />
 
 
 
