--- a/Jama/src/main/webapp/resources/sections/installmentWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizData.xhtml
@@ -1,9 +1,5 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:composite="http://java.sun.com/jsf/composite">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui" xmlns:composite="http://java.sun.com/jsf/composite">
 
 <composite:interface>
 	<composite:attribute name="editingDisable" default="false" />
@@ -14,176 +10,132 @@
 
 	<p:panel header="#{msgs.data_header}">
 
-		<h:panelGrid columns="3" columnClasses="label, value, errorMessage"
-			styleClass="grid">
+		<h:panelGrid columns="3" columnClasses="label, value, errorMessage" styleClass="grid">
 
 
 			<h:outputText value="#{msgs.newInstDate}:" />
-			<p:calendar id="date" datePattern="dd/MM/yyyy" required="true"
-				value="#{installmentManager.installment.date}"
+			<p:calendar id="date" datePattern="dd/MM/yyyy" required="true" value="#{installmentManager.installment.date}"
 				rendered="#{cc.attrs.editingDisable == false}">
 				<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 			</p:calendar>
 
-			<h:outputText id="date_o"
-				value="#{installmentManager.installment.date}"
-				rendered="#{cc.attrs.editingDisable == true}">
+			<h:outputText id="date_o" value="#{installmentManager.installment.date}" rendered="#{cc.attrs.editingDisable == true}">
 				<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 			</h:outputText>
 
 			<h:message for="date" />
 
 			<h:outputText value="#{msgs.amount}:" />
-			<h:inputText id="taxableAmount"
-				value="#{installmentManager.installment.wholeTaxableAmount}"
-				label="#{msgs.amount}" required="true"
+			<h:inputText id="taxableAmount" value="#{installmentManager.installment.wholeTaxableAmount}" label="#{msgs.amount}" required="true"
 				rendered="#{cc.attrs.editingDisable == false}">
 				<f:ajax render="amount" />
 			</h:inputText>
 
-			<h:outputText id="taxableAmount_o"
-				value="#{installmentManager.installment.wholeTaxableAmount}"
-				rendered="#{cc.attrs.editingDisable == true}">
+			<h:outputText id="taxableAmount_o" value="#{installmentManager.installment.wholeTaxableAmount}" rendered="#{cc.attrs.editingDisable == true}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 
 			<h:message for="taxableAmount" />
 
 			<h:outputText value="#{msgs.newInstIva}:" />
-			<h:inputText id="iva"
-				value="#{installmentManager.installment.IVA_amount}"
-				label="#{msgs.newInstIva}" required="true"
+			<h:inputText id="iva" value="#{installmentManager.installment.IVA_amount}" label="#{msgs.newInstIva}" required="true"
 				rendered="#{cc.attrs.editingDisable == false}">
 				<f:ajax render="amount" />
 			</h:inputText>
 
-			<h:outputText id="iva_o"
-				value="#{installmentManager.installment.IVA_amount}"
-				rendered="#{cc.attrs.editingDisable == true}">
+			<h:outputText id="iva_o" value="#{installmentManager.installment.IVA_amount}" rendered="#{cc.attrs.editingDisable == true}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 
 			<h:message for="iva" />
 
 			<h:outputText value="#{msgs.wholeAmount}:" />
-			<h:outputText id="amount"
-				value="#{installmentManager.installment.wholeAmount}"
-				readonly="true">
+			<h:outputText id="amount" value="#{installmentManager.installment.wholeAmount}" readonly="true">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 			<h:message for="amount" />
 
 			<h:outputText value="#{msgs.newInstVoucherNumber}:" />
-			<h:inputText id="voucherNumber"
-				value="#{installmentManager.installment.voucherNumber}"
-				label="#{msgs.newInstVoucherNumber}" required="true"
+			<h:inputText id="voucherNumber" value="#{installmentManager.installment.voucherNumber}" label="#{msgs.newInstVoucherNumber}" required="true"
 				rendered="#{cc.attrs.editingDisable == false}" />
 
-			<h:outputText id="voucherNumber_o"
-				value="#{installmentManager.installment.voucherNumber}"
-				rendered="#{cc.attrs.editingDisable == true}" />
+			<h:outputText id="voucherNumber_o" value="#{installmentManager.installment.voucherNumber}" rendered="#{cc.attrs.editingDisable == true}" />
 
 			<h:message for="voucherNumber" />
 
 			<h:outputText value="#{msgs.newInstVoucherDate}:" />
-			<p:calendar id="voucherDate" datePattern="dd/MM/yyyy" required="true"
-				value="#{installmentManager.installment.voucherDate}"
+			<p:calendar id="voucherDate" datePattern="dd/MM/yyyy" required="true" value="#{installmentManager.installment.voucherDate}"
 				rendered="#{cc.attrs.editingDisable == false}">
 				<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 			</p:calendar>
 
-			<h:outputText id="voucherDate_o"
-				value="#{installmentManager.installment.voucherDate}"
-				rendered="#{cc.attrs.editingDisable == true}">
+			<h:outputText id="voucherDate_o" value="#{installmentManager.installment.voucherDate}" rendered="#{cc.attrs.editingDisable == true}">
 				<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 			</h:outputText>
 
 			<h:message for="voucherDate" />
 
 			<h:outputText value="#{msgs.newInstIvaVoucherNumber}:" />
-			<h:inputText id="ivaVoucherNumber"
-				value="#{installmentManager.installment.ivaVoucherNumber}"
-				label="#{msgs.newInstVoucherNumber}" required="true"
+			<h:inputText id="ivaVoucherNumber" value="#{installmentManager.installment.ivaVoucherNumber}" label="#{msgs.newInstVoucherNumber}" required="true"
 				rendered="#{cc.attrs.editingDisable == false}" />
 
-			<h:outputText id="ivaVoucherNumber_o"
-				value="#{installmentManager.installment.ivaVoucherNumber}"
-				rendered="#{cc.attrs.editingDisable == true}" />
+			<h:outputText id="ivaVoucherNumber_o" value="#{installmentManager.installment.ivaVoucherNumber}" rendered="#{cc.attrs.editingDisable == true}" />
 
 			<h:message for="ivaVoucherNumber" />
 
 
 
 			<h:outputText value="#{msgs.newInstPendingNumber}:" />
-			<h:inputText id="pendingNumber"
-				value="#{installmentManager.installment.pendingNumber}"
-				label="#{msgs.newInstPendingNumber}" required="true"
+			<h:inputText id="pendingNumber" value="#{installmentManager.installment.pendingNumber}" label="#{msgs.newInstPendingNumber}" required="true"
 				rendered="#{cc.attrs.editingDisable == false}" />
 
-			<h:outputText id="pendingNumber_o"
-				value="#{installmentManager.installment.pendingNumber}"
-				rendered="#{cc.attrs.editingDisable == true}" />
+			<h:outputText id="pendingNumber_o" value="#{installmentManager.installment.pendingNumber}" rendered="#{cc.attrs.editingDisable == true}" />
 			<h:message for="pendingNumber" />
 
 			<h:outputText value="#{msgs.newInstInvoiceNumber}:" />
-			<h:inputText id="invoiceNumber"
-				value="#{installmentManager.installment.invoiceNumber}"
-				label="#{msgs.newInstInvoiceNumber}" required="true"
+			<h:inputText id="invoiceNumber" value="#{installmentManager.installment.invoiceNumber}" label="#{msgs.newInstInvoiceNumber}" required="true"
 				rendered="#{cc.attrs.editingDisable == false}" />
 
-			<h:outputText id="invoiceNumber_o"
-				value="#{installmentManager.installment.invoiceNumber}"
-				rendered="#{cc.attrs.editingDisable == true}" />
+			<h:outputText id="invoiceNumber_o" value="#{installmentManager.installment.invoiceNumber}" rendered="#{cc.attrs.editingDisable == true}" />
 			<h:message for="invoiceNumber" />
 
 			<h:outputText value="#{msgs.newInstInvoiceDate}:" />
-			<p:calendar id="invoiceDate" datePattern="dd/MM/yyyy" required="true"
-				value="#{installmentManager.installment.invoiceDate}"
+			<p:calendar id="invoiceDate" datePattern="dd/MM/yyyy" required="true" value="#{installmentManager.installment.invoiceDate}"
 				rendered="#{cc.attrs.editingDisable == false}">
 				<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 			</p:calendar>
 
-			<h:outputText id="invoiceDate_o"
-				value="#{installmentManager.installment.invoiceDate}"
-				rendered="#{cc.attrs.editingDisable == true}">
+			<h:outputText id="invoiceDate_o" value="#{installmentManager.installment.invoiceDate}" rendered="#{cc.attrs.editingDisable == true}">
 				<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 			</h:outputText>
 			<h:message for="invoiceDate" />
 
 
 			<h:outputText value="#{msgs.paidInvoice_Question}" />
-			<h:selectBooleanCheckbox id="paidInvoice"
-				value="#{installmentManager.installment.paidInvoice}"
-				disabled="#{cc.attrs.editingDisable == true}" />
+			<h:selectBooleanCheckbox id="paidInvoice" value="#{installmentManager.installment.paidInvoice}" disabled="#{cc.attrs.editingDisable == true}" />
 
 			<br />
 
 			<h:outputText value="#{msgs.reportRequired_Question}" />
-			<h:selectBooleanCheckbox
-				value="#{installmentManager.installment.reportRequired}"
-				id="reportRequired" disabled="#{cc.attrs.editingDisable == true}" />
+			<h:selectBooleanCheckbox value="#{installmentManager.installment.reportRequired}" id="reportRequired" disabled="#{cc.attrs.editingDisable == true}" />
 
 			<br />
 
 			<h:outputText value="#{msgs.newInstNote}:" />
-			<h:inputTextarea id="notes" cols="20" rows="4"
-				value="#{installmentManager.installment.note}"
-				label="#{msgs.newInstNote}" required="false"
+			<h:inputTextarea id="notes" cols="20" rows="4" value="#{installmentManager.installment.note}" label="#{msgs.newInstNote}" required="false"
 				rendered="#{cc.attrs.editingDisable == false}" />
 
-			<h:outputText id="notes_o"
-				value="#{installmentManager.installment.note}"
-				rendered="#{cc.attrs.editingDisable == true}" />
+			<h:outputText id="notes_o" value="#{installmentManager.installment.note}" rendered="#{cc.attrs.editingDisable == true}" />
 			<h:message for="notes" />
 
-			<h:inputHidden value="needed" id="amountCheck"
-				validator="#{installmentShareTablePCB.validateAmount}" />
-			<h:message styleClass="errorMessage" for="amountCheck" />
-
+			<ui:remove>
+				<h:inputHidden value="needed" id="amountCheck" validator="#{installmentShareTablePCB.validateAmount}" />
+				<h:message styleClass="errorMessage" for="amountCheck" />
+			</ui:remove>
 		</h:panelGrid>
 
 	</p:panel>
-	
+
 
 </composite:implementation>
 </html>
