--- a/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
@@ -278,7 +278,7 @@
 						rendered="#{cc.attrs.editingDisable == false}">
 						<f:convertNumber />
 						<f:validateDoubleRange minimum="0.0" />
-						<f:ajax execute="@this" render="amount taxAmountError" />
+						<f:ajax render="amount taxAmountError" />
 					</h:inputText>
 
 					<h:outputText id="taxableAmount_o"
@@ -308,7 +308,7 @@
 						rendered="#{cc.attrs.editingDisable == false}">
 						<f:convertNumber />
 						<f:validateDoubleRange minimum="0.0" maximum="100.0" />
-						<f:ajax execute="@this" render="amount ivaError" />
+						<f:ajax render="amount ivaError" />
 					</h:inputText>
 
 					<h:outputText id="iva_o"
@@ -353,7 +353,7 @@
 						label="#{msgs.reservedAmount}" required="true"
 						rendered="#{cc.attrs.editingDisable == false}">
 						<f:convertNumber />
-						<f:ajax event="blur" execute="@this" render="reservedAmountError" />
+						<f:ajax event="blur" execute="@this spentAmount" render="reservedAmountError spentAmountError" />
 						<f:validateDoubleRange minimum="0.0"
 							maximum="#{agreementManager.agreement.turnOver}" />
 					</h:inputText>
@@ -382,11 +382,11 @@
 					<h:inputText id="spentAmount"
 						value="#{agreementManager.agreement.spentAmount}"
 						label="#{msgs.spentAmount}" required="true"
-						rendered="#{cc.attrs.editingDisable == false}">
+						rendered="#{cc.attrs.editingDisable == false}" validator="#{agreementWizardPB.validateSpentAmount}"> 
 						<f:convertNumber />
 						<f:ajax event="blur" execute="@this" render="spentAmountError" />
-						<f:validateDoubleRange minimum="0.0"
-							maximum="#{agreementManager.agreement.reservedAmount}" />
+<!-- 						<f:validateDoubleRange minimum="0.0" -->
+<!-- 							maximum="#{agreementManager.agreement.reservedAmount}" /> -->
 					</h:inputText>
 
 					<h:outputText id="spentAmount_o"
