--- a/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
@@ -116,7 +116,7 @@
 				</p:column>
 
 				<p:column>
-					<p:selectOneMenu id="chiefMenu"
+					<p:selectOneMenu id="chiefMenu" styleClass="chiefMenu"
 						value="#{agreementManager.agreement.chief}" label="#{msgs.chief}"
 						required="true" filter="true" filterMatchMode="contains"
 						rendered="#{cc.attrs.editingDisable == false}">
