--- a/Jama/src/main/webapp/agreementView.xhtml
+++ b/Jama/src/main/webapp/agreementView.xhtml
@@ -53,6 +53,8 @@
 
 			<p:commandButton value="back" action="#{agreementEditPB.cancel()}"
 				ajax="false" />
+			<p:commandButton action="#{agreementManager.editAgreement()}" value="toEditMode" 
+			ajax="false"></p:commandButton>
 
 
 
