--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -1,9 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:sections="http://java.sun.com/jsf/composite/sections">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:sections="http://java.sun.com/jsf/composite/sections">
 
 
 
@@ -13,10 +10,9 @@
 <h:body>
 	<h:form>
 		<h:outputText value="Cosa vuoi fare oggi?" styleClass="text" />
-		<h:commandButton value="Crea Convenzione"
-			action="#{agreementManager.createAgreement()}" styleClass="buttons" />
-		<h:button value="Lista convenzioni" outcome="agreementList"
-			styleClass="buttons" />
+		<h:commandButton value="Crea Convenzione" action="#{agreementManager.createAgreement()}" styleClass="buttons" />
+		<h:button value="Lista convenzioni" outcome="agreementList" styleClass="buttons" />
+		<h:button value="Scadenzario" outcome="agreementSchedule" styleClass="buttons" />
 	</h:form>
 </h:body>
 
